syntax = "proto3";
package proto;
option go_package = ".;proto";

import "google/protobuf/empty.proto";

service Process {
    // stream updates to processes as they happen
    rpc ProcessDiffStream (google.protobuf.Empty) returns (stream ProcessDiffStreamResponse);

    // get a list of all processes
    rpc ProcessList (google.protobuf.Empty) returns (ProcessListResponse);
}

message ProcessInfo {
    int32 pid = 1;
    string command = 2;
    string arguments = 3;
}

enum ProcessAction {
    PROCESS_ACTION_UNKNOWN = 0;
    PROCESS_ACTION_STARTED = 1;
    PROCESS_ACTION_STOPPED = 2;
}

message ProcessDiffStreamResponse {
    string process = 1;
    ProcessAction action = 2;
}

message ProcessListResponse {
    repeated string processes = 1;
}
